Image Classifier's project file has been added

--- a/ImageClassifiers_part1_N_2/aipnd-project-master/Image Classifier Project.ipynb
+++ b/ImageClassifiers_part1_N_2/aipnd-project-master/Image Classifier Project.ipynb
@@ -483,17 +483,21 @@
    "outputs": [],
    "source": [
     "# TODO: Save the checkpoint \n",
-    "def saveCheckpoint(model):\n",
+    "def saveCheckpoint(model, epochs, learning_rate, optimizer):\n",
     "    \n",
     "    # Mapping of classes to indices\n",
     "    model.class_to_idx = train_data.class_to_idx\n",
     "    \n",
     "    # Create model metadata dictionary\n",
+    "    #     epochs, learning rate and optimizer\n",
     "    checkpoint = {\n",
     "        'name': model.name,\n",
     "        'class_to_idx': model.class_to_idx,\n",
     "        'classifier': model.classifier,\n",
-    "        'model_state_dict': model.state_dict()\n",
+    "        'model_state_dict': model.state_dict(),\n",
+    "        'epochs':epochs,\n",
+    "        'learning_rate' :learning_rate, \n",
+    "        'optimizer':optimizer\n",
     "    }\n",
     "\n",
     "    # Save to a file\n",
@@ -573,7 +577,7 @@
     "      f\"Train loss: {train_loss:.3f}.. \\n\",\n",
     "      f\"Test loss: {valid_loss:.3f}.. \\n\",\n",
     "      f\"Test accuracy: {valid_accuracy:.3f}\")\n",
-    "filename = saveCheckpoint(model)"
+    "filename = saveCheckpoint(model, epochs_no, learning_rate, optimizer)"
    ]
   },
   {
@@ -1070,7 +1074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
